using snake_case

--- a/src/Web.Host/appsettings.json
+++ b/src/Web.Host/appsettings.json
@@ -9,7 +9,27 @@
       "username": "somebai",
       "subjectId": "1",
       "claims": [
-        { "type": "tenantId", "value": "1" }
+        {
+          "type": "tenantId",
+          "value": "1"
+        }
+      ]
+    }
+  ],
+  "resources": [
+    {
+      "name": "example.api",
+      "scopes": [
+        "example.api.read",
+        "example.api.write"
+      ]
+    }
+  ],
+  "clients": [
+    {
+      "clientId": "example_client",
+      "allowedScopes": [
+        "example.api.read"
       ]
     }
   ]
